Fix overflowing text entries

--- a/gtk-3.20/apps/_gnome.scss
+++ b/gtk-3.20/apps/_gnome.scss
@@ -70,7 +70,12 @@
  .searchbar-container {
     margin-top: -1px;
   }
-
+  .titlebar {
+    .search{
+      border: 1px solid $borders_color;
+      border-radius: 3px;
+    }
+  }
   .path-bar-box {
     .dim-label {
       color: transparent;
